# instagram_parser

./: .env.example  .gitignore  main.py  pyproject.toml
inst/: __init__.py
inst/api/: __init__.py  core.py  datamodels.py
inst/api/routers/: __init__.py  main_router.py
inst/parser/: __init__.py  pars_inst_bio.py  pars_inst_video.py
inst/parsers/: __init__.py
inst/parsers/parser_inst/: __init__.py  pars_inst_video.py
