[tool.poetry]
name = "inst"
version = "0.1.0"
description = ""
authors = ["G0shan4ik <egorkononec64@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
instagrapi = "^2.1.3"
fastapi = "^0.115.12"
aiohttp = "^3.11.18"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
