[tool.poetry]
name = "inst"
version = "0.1.0"
description = ""
authors = ["G0shan4ik <egorkononec64@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
aiohttp = "^3.11.18"
requests = "^2.32.3"
loguru = "^0.7.3"
dotenv = "^0.9.9"
beautifulsoup4 = "^4.13.4"
instaloader = "^4.14.1"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
